; ModuleID = '/home/carl/AnghaBench/mpv/demux/extr_demux.c_demux_cancel_and_free.c'
source_filename = "/home/carl/AnghaBench/mpv/demux/extr_demux.c_demux_cancel_and_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.demuxer = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @demux_cancel_and_free(%struct.demuxer* %0) #0 {
  %2 = alloca %struct.demuxer*, align 8
  store %struct.demuxer* %0, %struct.demuxer** %2, align 8
  %3 = load %struct.demuxer*, %struct.demuxer** %2, align 8
  %4 = icmp ne %struct.demuxer* %3, null
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %13

6:                                                ; preds = %1
  %7 = load %struct.demuxer*, %struct.demuxer** %2, align 8
  %8 = getelementptr inbounds %struct.demuxer, %struct.demuxer* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @mp_cancel_trigger(i32 %9)
  %11 = load %struct.demuxer*, %struct.demuxer** %2, align 8
  %12 = call i32 @demux_free(%struct.demuxer* %11)
  br label %13

13:                                               ; preds = %6, %5
  ret void
}

declare dso_local i32 @mp_cancel_trigger(i32) #1

declare dso_local i32 @demux_free(%struct.demuxer*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
